--- a/flat/templates/index.html
+++ b/flat/templates/index.html
@@ -89,7 +89,7 @@
     {% if allowcopy or allowdelete %}
     <div id="filemanagement">
         <h4>Document Management Operations</h4>
-        <input type="hidden" name="filemanmode" value="" />
+        <input type="hidden" id="filemanmode" name="filemanmode" value="" />
         {% if allowcopy %}
         <button id="copybutton" onclick="submitfilemanager('copy')">Copy</button> selected documents to <input name="copytarget" /> <br/>
         {% endif %}
