--- a/flat/templates/index.html
+++ b/flat/templates/index.html
@@ -78,7 +78,7 @@
         {% endfor %}
         </ul>
     {% endif %}
-    <form id="filemanform" action="/filemanagement/" method"post"/>
+    <form id="filemanform" action="/filemanagement/" method="post"/>
     {% if docs %}
         <ul id="doclist">
         {% for doc, size, timestamp  in docs %}
