--- a/flat/templates/index.html
+++ b/flat/templates/index.html
@@ -66,7 +66,7 @@
         <button id="newbutton" class="button">New document</button>
     {% endif %}
     {% if configuration.allowupload %}
-        <button id="showuploadbutton" class="button">Add document</button>
+        <button id="showuploadbutton" class="button">Upload document</button>
     {% endif %}
     {% if configuration.allowupload or configuration.allownew %}
         <button id="adddirectorybutton" class="button">Add new directory</button>
