Implementing selector support for viewer (issue #75)

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -51,6 +51,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 {% block dialogs %}
 <div id="leftpane">
     <div id="perspective"></div>
+    <div id="selector"></div>
     <div id="textclassselector"></div>
     <div id="editformcorrectionsetselector">
     Correction set: <select id="editformcorrectionset"></select>
