--- a/flat/modes/viewer/templates/viewer.html
+++ b/flat/modes/viewer/templates/viewer.html
@@ -12,6 +12,7 @@
 {% block dialogs %}
 <div id="leftpane">
     <div id="perspective"></div>
+    <div id="selector"></div>
     <div id="textclassselector"></div>
     <div id="legend"></div>
 </div>
