another minor style improvement to create some order when the view is complex

--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -33,6 +33,7 @@ div#editor th {
     overflow: hidden;
     max-width: 150px;
     vertical-align: top;
+    border-bottom: 1px #eee solid;
 }
 div#editor tr:hover th {
     color: #30677c;
