split generic folia functions from flat.js into folia.js

--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -14,6 +14,7 @@
         <link rel="StyleSheet" href="/style/jquery-ui.min.css" type="text/css" />
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/foliaspec.js"></script> 
+        <script type="text/javascript" src="/style/folia.js"></script> 
         <script type="text/javascript" src="/style/flat.js"></script> 
         {% block head %}
         {% endblock %}
