--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -277,3 +277,8 @@ div.confidenceeditor div {
     border: 2px dashed black;
     text-align: center;
 }
+
+.spanparenteditor select {
+    max-width: 400px;
+    overflow: crop;
+}
