parentspan in gather_change (#3 subissue e)

--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -278,7 +278,7 @@ div.confidenceeditor div {
     text-align: center;
 }
 
-.spanparenteditor select {
+.parentspaneditor select {
     max-width: 400px;
     overflow: crop;
 }
