--- a/flat/style/flat.editor.css
+++ b/flat/style/flat.editor.css
@@ -281,3 +281,13 @@ div.confidenceeditor div {
     max-width: 320px;
     overflow: hidden;
 }
+
+div.opentreeview {
+    background: url(treeview.png);
+    background-size: 48px 34px;
+    width: 48px;
+    height: 34px;
+    min-width: 48px;
+    min-height: 34px;
+    cursor: pointer;
+}
