Implemented an annotation viewer dialog

--- a/flat/modes/viewer/templates/viewer.html
+++ b/flat/modes/viewer/templates/viewer.html
@@ -22,6 +22,14 @@
 </div>
 <div id="info"></div>
 {% include "search.html" %}
+<div id="viewer">
+    <div id="viewerheader">
+        <span>Annotation Viewer</span>
+        <button id="viewerdiscard">x</button>
+    </div>
+    <div class="body">
+    </div>
+</div>
 {% include "treeview.html" %}
 <div id="connectioninfo"></div>
 {% endblock %}
