--- a/flat/modes/viewer/templates/viewertoolsandoptions.html
+++ b/flat/modes/viewer/templates/viewertoolsandoptions.html
@@ -1,7 +1,7 @@
     <li id="opensearch"><a href="javascript:opensearch()">Search</a></li>
     {% if configuration.searches %}
     {% for search in configuration.searches %}
-    <li id="opensearch"><a href="javascript:presetsearch({{forloop.counter0}})">{{search.label}}</a></li>
+    <li><a href="javascript:presetsearch({{forloop.counter0}})">{{search.label}}</a></li>
     {% endfor %}
     {% endif %}
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
