Clean up "Add new annotation type" dialog #96

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -87,8 +87,9 @@ initialcorrectionset = '{{ initialcorrectionset }}';
         <span>Declare New Annotation Type</span>
         <button id="newdeclarationdiscard">x</button>
     </div>
+    <p>Here you can declare a new type of linguistic annotation, by choosing the type and pointing it to a valid FoLiA Set Definition that defines what classes (e.g. label/tag set) is to be used.</p>
     <label>Annotation Type:</label> <select id="newdeclarationannotationtype"></select><br />
-    <label>Set: </label> <input id="newdeclarationset" /> 
+    <label>Set Definition URL:</label> <input id="newdeclarationset" /> 
     <div class="buttoncontainer">
         <input id="newdeclarationsubmit" type="submit" value="Add declaration" class="button" />
     </div>
