Implementing public facility, allowing public anonymous uploads/views/edits (without login) #50

--- a/flat/templates/index.html
+++ b/flat/templates/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="adddirectoryform" class="dialog">
-    <h3>Upload</h3>
+    <h3>Add Directory</h3>
     <form action="/addnamespace/" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <label>Namespace: </label> {{namespace}}<br />
