--- a/flat/templates/base.html
+++ b/flat/templates/base.html
@@ -24,6 +24,7 @@
         {% endif %}
         {% if docid and not fatalerror %}
         <script type="text/javascript">
+            configuration_id = "{{ configuration_id|safe }}";
             configuration = {{ configuration_json|safe }};
             username = "{{ username|safe }}";
             namespace = "{{ namespace|safe }}";
@@ -71,7 +72,11 @@
                 <li>Modes
                 <ul>
                         {% for mode, modename in modes %}
+                        {% if namespace == "pub" %} 
+                        <li><a href="/{{ mode }}/pub/{{ configuration_id }}/{{ docid }}/">{{ modename }}</a></li>
+                        {% else %}
                         <li><a href="/{{ mode }}/{{ namespace }}/{{ docid }}/">{{ modename }}</a></li>
+                        {% endif %}
                         {% endfor %}
                 </ul>
                 </li>
