--- a/flat/templates/login.html
+++ b/flat/templates/login.html
@@ -22,7 +22,7 @@
     <div class="buttoncontainer">
         <input class="button" type="submit" value="Log in" />
         <span class="helptext">
-         ( ({% if allowregistration %} no account yet? <a href="/register/">Register here</a> |{% endif %} <a href="/account/password_reset/">Forgot password?</a>)
+         ({% if allowregistration %} no account yet? <a href="/register/">Register here</a> |{% endif %} <a href="/account/password_reset/">Forgot password?</a>)
         </span>
     </div>
     {% csrf_token %}
